--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,12 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Test_Quipu"
         mc:Ignorable="d"
-        Title="Test_Quipu" Height="107" Width="368" ResizeMode="CanMinimize">
+        Title="Test_Quipu" Height="277" Width="373" SizeToContent="Height" ResizeMode="NoResize">
     <Grid>
-        <ProgressBar x:Name="ProgressBar" HorizontalAlignment="Left" Height="20" Margin="10,38,0,0" VerticalAlignment="Top" Width="252"/>
-        <Button x:Name="SelectBut" Content="..." HorizontalAlignment="Left" Margin="319,10,0,0" VerticalAlignment="Top" Width="23" Height="23"/>
-        <TextBox x:Name="PathBox" HorizontalAlignment="Left" Height="23" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304" AllowDrop="True"/>
-        <Button x:Name="ActionBut" Content="Go" HorizontalAlignment="Left" Margin="267,38,0,0" VerticalAlignment="Top" Width="75"/>
+        <ProgressBar x:Name="ProgressBar" HorizontalAlignment="Left" Height="20" Margin="10,202,0,0" VerticalAlignment="Top" Width="252"/>
+        <Button x:Name="SelectBut" Content="..." HorizontalAlignment="Left" Margin="319,10,0,0" VerticalAlignment="Top" Width="23" Height="23" Click="SelectBut_Click"/>
+        <TextBox x:Name="PathBox" HorizontalAlignment="Left" Height="23" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304" AllowDrop="False" IsReadOnly="True"/>
+        <Button x:Name="ActionBut" Content="Go" HorizontalAlignment="Left" Margin="267,202,0,0" VerticalAlignment="Top" Width="75" Click="ActionBut_Click"/>
+        <ListView x:Name="UrlsView" Margin="10,38,31,64" ItemsSource="{Binding Path=Site}">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Site" DisplayMemberBinding="{Binding Path=siteUrl}"/>
+                    <GridViewColumn Header="Count of &lt;a>" DisplayMemberBinding="{Binding Path=tagsCount}"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
 
     </Grid>
 </Window>
